# Rust-Particle-System

./: Cargo.toml
assets/: compute_shader.wgsl  render_shader.wgsl
src/: debug.rs  main.rs  parameter_gui.rs  particle.rs  particle_buffers.rs  particle_compute.rs  particle_render.rs  unused.rs  util.rs  utils.rs
