[package]
name = "particle_system"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.23.1"
rand = "0.9.1"
rand_distr = "0.5.1"

[profile.dev]
opt-level = 0
debug = 2      # or 1/2; 2 is fine
incremental = true

[dependencies.bevy]
version = "0.16"
default-features = false
features = [
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_asset",
  "bevy_log",
  "bevy_winit",
]
