[package]
name = "particle_system"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.23.1"
futures-intrusive = "0.5.0"
rand = "0.9.1"
rand_distr = "0.5.1"

[dependencies.bevy]
version = "0.16"
default-features = false
features = [
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_asset",
  "bevy_log",
  "bevy_winit",
]

[profile.dev]
debug = true
opt-level = 0
incremental = true

